fixed block block-secrets at skoring.html: item margin on mobile devices

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -4582,18 +4582,17 @@
 		box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.15)
 		border-radius: 6px
 		overflow: hidden
-		margin-bottom: 30px
 		position: relative
 
 		@media screen and (max-width: $media-lg)
 			padding: 25px 30px 45px
+			margin-bottom: 30px
 
 		@media screen and (max-width: $media-sm)
 			padding: 25px 15px 45px
 
 		&:last-child
-			@media screen and (max-width: $media-sm)
-				margin-bottom: 0
+			margin-bottom: 0
 
 	&__item-heading
 		font-size: 18px
